@@ -1,3 +1,8 @@
+2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Addins.Database/AddinDatabase.cs: Fixed file filter for getting all
+	  add-ins with a given name.
+
 2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Addins/TreeNode.cs, Mono.Addins/ExtensionContext.cs: When activating
